@@ -1,0 +1,4 @@
+package com.robertx22.mine_and_slash.new_content_test.potion_datas.impls;
+
+public class ShieldEffect {
+}
